Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
N/A
-
None
-
Not for Release Notes
Description
CREATE TABLE t (id INT PRIMARY KEY, b TEXT COMPRESSED) ENGINE=HEAP; |
INSERT INTO t VALUES (1,'foo'); |
REPLACE INTO t VALUES (1,''),(2,''); |
|
|
DROP TABLE t; |
|
bb-blob-main-monty 47f0242d88868afeb299b767ebbfd7cc88530acb |
mariadbd: /data/bld/testing/bb-blob-main-monty-asan/storage/heap/hp_blob.c:197: hp_flush_unaliased_blob_free: Assertion `(data_len == 0) == (data_ptr == ((void *)0))' failed.
|
260801 21:59:39 [ERROR] /share8t/bld/testing/bb-blob-main-monty-asan/sql/mariadbd got signal 6 ;
|
|
|
#10 0x00007feadea52ec2 in __GI___assert_fail (assertion=assertion@entry=0x558cc3afafa0 "(data_len == 0) == (data_ptr == ((void *)0))", file=file@entry=0x558cc3afac20 "/data/bld/testing/bb-blob-main-monty-asan/storage/heap/hp_blob.c", line=line@entry=197, function=function@entry=0x558cc3afb340 <__PRETTY_FUNCTION__.7> "hp_flush_unaliased_blob_free") at ./assert/assert.c:103
|
#11 0x0000558cc278f914 in hp_flush_unaliased_blob_free (info=info@entry=0x6180000328a0, record=record@entry=0x62500025af38 "\376\002") at /data/bld/testing/bb-blob-main-monty-asan/storage/heap/hp_blob.c:197
|
#12 0x0000558cc278a689 in heap_write (info=0x6180000328a0, record=0x62500025af38 "\376\002") at /data/bld/testing/bb-blob-main-monty-asan/storage/heap/hp_write.c:54
|
#13 0x0000558cc276e916 in ha_heap::write_row (this=0x62500025a960, buf=0x62500025af38 "\376\002") at /data/bld/testing/bb-blob-main-monty-asan/storage/heap/ha_heap.cc:298
|
#14 0x0000558cc1d3966c in handler::ha_write_row (this=0x62500025a960, buf=<optimized out>) at /data/bld/testing/bb-blob-main-monty-asan/sql/handler.cc:8521
|
#15 0x0000558cc122857b in Write_record::replace_row (this=this@entry=0x7fead2829510, inserted=inserted@entry=0x7fead2829090, deleted=deleted@entry=0x7fead28290b0) at /data/bld/testing/bb-blob-main-monty-asan/sql/sql_insert.cc:2157
|
#16 0x0000558cc122a37a in Write_record::write_record (this=this@entry=0x7fead2829510) at /data/bld/testing/bb-blob-main-monty-asan/sql/sql_insert.cc:2438
|
#17 0x0000558cc1243923 in mysql_insert (thd=thd@entry=0x62c0000b0220, table_list=0x62d0001045a0, fields=..., values_list=..., update_fields=..., update_values=..., duplic=<optimized out>, ignore=<optimized out>, result=<optimized out>) at /data/bld/testing/bb-blob-main-monty-asan/sql/sql_insert.cc:1232
|
#18 0x0000558cc130bfd5 in mysql_execute_command (thd=thd@entry=0x62c0000b0220, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /data/bld/testing/bb-blob-main-monty-asan/sql/sql_parse.cc:4502
|
#19 0x0000558cc1316df9 in mysql_parse (thd=thd@entry=0x62c0000b0220, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x7fead282a990) at /data/bld/testing/bb-blob-main-monty-asan/sql/sql_parse.cc:7945
|
#20 0x0000558cc131aac1 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x62c0000b0220, packet=packet@entry=0x629000267221 "REPLACE INTO t VALUES (1,''),(2,'')", packet_length=packet_length@entry=35, blocking=blocking@entry=true) at /data/bld/testing/bb-blob-main-monty-asan/sql/sql_parse.cc:1903
|
#21 0x0000558cc131f958 in do_command (thd=thd@entry=0x62c0000b0220, blocking=blocking@entry=true) at /data/bld/testing/bb-blob-main-monty-asan/sql/sql_parse.cc:1437
|
#22 0x0000558cc17d2ab0 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x60b000004890, put_in_cache=put_in_cache@entry=true) at /data/bld/testing/bb-blob-main-monty-asan/sql/sql_connect.cc:1503
|
#23 0x0000558cc17d2fa6 in handle_one_connection (arg=arg@entry=0x60b000004890) at /data/bld/testing/bb-blob-main-monty-asan/sql/sql_connect.cc:1415
|
#24 0x0000558cc24a8695 in pfs_spawn_thread (arg=0x6170000069a0) at /data/bld/testing/bb-blob-main-monty-asan/storage/perfschema/pfs.cc:2198
|
#25 0x00007feadeaa71f5 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
|
#26 0x00007feadeb278ec in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
|
Attachments
Issue Links
- is caused by
-
MDEV-38975 BLOBs in MEMORY (HEAP) Engine
-
- Stalled
-
-
MDEV-40523 ASAN errors upon update on versioned HEAP table with blob
-
- Closed
-